src/exec/ExprEngine/exprEngineParser.cpp

// Generated from exprEngineParser.g4 by ANTLR 4.13.2


#include "exprEngineParserListener.h"
#include "exprEngineParserVisitor.h"

#include "exprEngineParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ExprEngineParserStaticData final {
  ExprEngineParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ExprEngineParserStaticData(const ExprEngineParserStaticData&) = delete;
  ExprEngineParserStaticData(ExprEngineParserStaticData&&) = delete;
  ExprEngineParserStaticData& operator=(const ExprEngineParserStaticData&) = delete;
  ExprEngineParserStaticData& operator=(ExprEngineParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag exprengineparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<ExprEngineParserStaticData> exprengineparserParserStaticData = nullptr;

void exprengineparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (exprengineparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(exprengineparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ExprEngineParserStaticData>(
    std::vector<std::string>{
      "expression", "expr", "aggregateOver", "identifier", "functionCall", 
      "statelessFn", "aggregateFn", "mathFn", "stringFn", "timestampFn", 
      "literal", "realLit", "intLit", "boolLit", "stringLit", "timestampLit", 
      "nullLit", "timeUnit"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "'='", "'!='", "'<'", "'>'", "'<='", 
      "'>='", "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", "'^'", "'||'", 
      "','", "'('", "')'", "'|'", "'['", "']'", "'''", "'`'"
    },
    std::vector<std::string>{
      "", "YEARS", "MONTHS", "DAYS", "WEEKS", "HOURS", "MINUTES", "SECONDS", 
      "POPULATION", "SAMPLE", "ABS", "SIGN", "SQRT", "POW", "LOG", "LOG2", 
      "LOG10", "EXP", "ERF", "CDFNORM", "FLOOR", "CEIL", "ROUND", "SIN", 
      "COS", "TAN", "CLOSEENOUGH", "AGGREGATE", "OVER", "MEAN", "MEDIAN", 
      "STDDEV", "VARIANCE", "MAX", "MIN", "SUM", "PROD", "LENGTH", "CONTAINS", 
      "STARTSWITH", "ENDSWITH", "LIKE", "DATEDIFF", "DATEADD", "WEEKOFYEAR", 
      "WEEKOFMONTH", "DAYOFWEEK", "SECONDOFDAY", "YEAR", "MONTH", "DAY", 
      "HOUR", "MINUTE", "SECOND", "TRUE", "FALSE", "NULL_", "NOT", "AND", 
      "OR", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "PLUS", "MINUS", "STAR", 
      "SLASH", "DSLASH", "PERCENT", "CARET", "CONCAT", "COMMA", "LPAREN", 
      "RPAREN", "PIPE", "LBRACKET", "RBRACKET", "SQUOTE", "BACKTICK", "QUOTED_IDENTIFIER", 
      "IDENTIFIER", "REAL_LITERAL", "INT_LITERAL", "ISO_DATETIME", "ISO_DATE", 
      "ISO_TIME", "STRING_LITERAL", "UNTERMINATED_STRING_LITERAL", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  exprengineparserParserStaticData = std::move(staticData);
}

}

exprEngineParser::exprEngineParser(TokenStream *input) : exprEngineParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

exprEngineParser::exprEngineParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  exprEngineParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *exprengineparserParserStaticData->atn, exprengineparserParserStaticData->decisionToDFA, exprengineparserParserStaticData->sharedContextCache, options);
}

exprEngineParser::~exprEngineParser() {
  delete _interpreter;
}

const atn::ATN& exprEngineParser::getATN() const {
  return *exprengineparserParserStaticData->atn;
}

std::string exprEngineParser::getGrammarFileName() const {
  return "exprEngineParser.g4";
}

const std::vector<std::string>& exprEngineParser::getRuleNames() const {
  return exprengineparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& exprEngineParser::getVocabulary() const {
  return exprengineparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView exprEngineParser::getSerializedATN() const {
  return exprengineparserParserStaticData->serializedATN;
}


//----------------- ExpressionContext ------------------------------------------------------------------

exprEngineParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

exprEngineParser::ExprContext* exprEngineParser::ExpressionContext::expr() {
  return getRuleContext<exprEngineParser::ExprContext>(0);
}

exprEngineParser::AggregateOverContext* exprEngineParser::ExpressionContext::aggregateOver() {
  return getRuleContext<exprEngineParser::AggregateOverContext>(0);
}

tree::TerminalNode* exprEngineParser::ExpressionContext::EOF() {
  return getToken(exprEngineParser::EOF, 0);
}


size_t exprEngineParser::ExpressionContext::getRuleIndex() const {
  return exprEngineParser::RuleExpression;
}

void exprEngineParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void exprEngineParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


std::any exprEngineParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

exprEngineParser::ExpressionContext* exprEngineParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 0, exprEngineParser::RuleExpression);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(39);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case exprEngineParser::ABS:
      case exprEngineParser::SIGN:
      case exprEngineParser::SQRT:
      case exprEngineParser::POW:
      case exprEngineParser::LOG:
      case exprEngineParser::LOG2:
      case exprEngineParser::LOG10:
      case exprEngineParser::EXP:
      case exprEngineParser::ERF:
      case exprEngineParser::CDFNORM:
      case exprEngineParser::FLOOR:
      case exprEngineParser::CEIL:
      case exprEngineParser::ROUND:
      case exprEngineParser::SIN:
      case exprEngineParser::COS:
      case exprEngineParser::TAN:
      case exprEngineParser::CLOSEENOUGH:
      case exprEngineParser::MEAN:
      case exprEngineParser::MEDIAN:
      case exprEngineParser::STDDEV:
      case exprEngineParser::VARIANCE:
      case exprEngineParser::MAX:
      case exprEngineParser::MIN:
      case exprEngineParser::SUM:
      case exprEngineParser::PROD:
      case exprEngineParser::LENGTH:
      case exprEngineParser::CONTAINS:
      case exprEngineParser::STARTSWITH:
      case exprEngineParser::ENDSWITH:
      case exprEngineParser::LIKE:
      case exprEngineParser::DATEDIFF:
      case exprEngineParser::DATEADD:
      case exprEngineParser::WEEKOFYEAR:
      case exprEngineParser::WEEKOFMONTH:
      case exprEngineParser::DAYOFWEEK:
      case exprEngineParser::SECONDOFDAY:
      case exprEngineParser::YEAR:
      case exprEngineParser::MONTH:
      case exprEngineParser::DAY:
      case exprEngineParser::HOUR:
      case exprEngineParser::MINUTE:
      case exprEngineParser::SECOND:
      case exprEngineParser::TRUE:
      case exprEngineParser::FALSE:
      case exprEngineParser::NULL_:
      case exprEngineParser::NOT:
      case exprEngineParser::MINUS:
      case exprEngineParser::LPAREN:
      case exprEngineParser::PIPE:
      case exprEngineParser::QUOTED_IDENTIFIER:
      case exprEngineParser::IDENTIFIER:
      case exprEngineParser::REAL_LITERAL:
      case exprEngineParser::INT_LITERAL:
      case exprEngineParser::ISO_DATETIME:
      case exprEngineParser::ISO_DATE:
      case exprEngineParser::ISO_TIME:
      case exprEngineParser::STRING_LITERAL: {
        enterOuterAlt(_localctx, 1);
        setState(36);
        expr(0);
        break;
      }

      case exprEngineParser::AGGREGATE: {
        enterOuterAlt(_localctx, 2);
        setState(37);
        aggregateOver();
        break;
      }

      case exprEngineParser::EOF: {
        enterOuterAlt(_localctx, 3);
        setState(38);
        match(exprEngineParser::EOF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

exprEngineParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t exprEngineParser::ExprContext::getRuleIndex() const {
  return exprEngineParser::RuleExpr;
}

void exprEngineParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
  this->returnType = ctx->returnType;
}

//----------------- ExprNotContext ------------------------------------------------------------------

tree::TerminalNode* exprEngineParser::ExprNotContext::NOT() {
  return getToken(exprEngineParser::NOT, 0);
}

exprEngineParser::ExprContext* exprEngineParser::ExprNotContext::expr() {
  return getRuleContext<exprEngineParser::ExprContext>(0);
}

exprEngineParser::ExprNotContext::ExprNotContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprNotContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprNot(this);
}
void exprEngineParser::ExprNotContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprNot(this);
}

std::any exprEngineParser::ExprNotContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprNot(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprNegateContext ------------------------------------------------------------------

tree::TerminalNode* exprEngineParser::ExprNegateContext::MINUS() {
  return getToken(exprEngineParser::MINUS, 0);
}

exprEngineParser::ExprContext* exprEngineParser::ExprNegateContext::expr() {
  return getRuleContext<exprEngineParser::ExprContext>(0);
}

exprEngineParser::ExprNegateContext::ExprNegateContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprNegateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprNegate(this);
}
void exprEngineParser::ExprNegateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprNegate(this);
}

std::any exprEngineParser::ExprNegateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprNegate(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprDivContext ------------------------------------------------------------------

tree::TerminalNode* exprEngineParser::ExprDivContext::SLASH() {
  return getToken(exprEngineParser::SLASH, 0);
}

std::vector<exprEngineParser::ExprContext *> exprEngineParser::ExprDivContext::expr() {
  return getRuleContexts<exprEngineParser::ExprContext>();
}

exprEngineParser::ExprContext* exprEngineParser::ExprDivContext::expr(size_t i) {
  return getRuleContext<exprEngineParser::ExprContext>(i);
}

exprEngineParser::ExprDivContext::ExprDivContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprDivContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprDiv(this);
}
void exprEngineParser::ExprDivContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprDiv(this);
}

std::any exprEngineParser::ExprDivContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprDiv(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprAbsContext ------------------------------------------------------------------

std::vector<tree::TerminalNode *> exprEngineParser::ExprAbsContext::PIPE() {
  return getTokens(exprEngineParser::PIPE);
}

tree::TerminalNode* exprEngineParser::ExprAbsContext::PIPE(size_t i) {
  return getToken(exprEngineParser::PIPE, i);
}

exprEngineParser::ExprContext* exprEngineParser::ExprAbsContext::expr() {
  return getRuleContext<exprEngineParser::ExprContext>(0);
}

exprEngineParser::ExprAbsContext::ExprAbsContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprAbsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprAbs(this);
}
void exprEngineParser::ExprAbsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprAbs(this);
}

std::any exprEngineParser::ExprAbsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprAbs(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprEqContext ------------------------------------------------------------------

tree::TerminalNode* exprEngineParser::ExprEqContext::EQ() {
  return getToken(exprEngineParser::EQ, 0);
}

std::vector<exprEngineParser::ExprContext *> exprEngineParser::ExprEqContext::expr() {
  return getRuleContexts<exprEngineParser::ExprContext>();
}

exprEngineParser::ExprContext* exprEngineParser::ExprEqContext::expr(size_t i) {
  return getRuleContext<exprEngineParser::ExprContext>(i);
}

exprEngineParser::ExprEqContext::ExprEqContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprEqContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprEq(this);
}
void exprEngineParser::ExprEqContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprEq(this);
}

std::any exprEngineParser::ExprEqContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprEq(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprGtContext ------------------------------------------------------------------

tree::TerminalNode* exprEngineParser::ExprGtContext::GT() {
  return getToken(exprEngineParser::GT, 0);
}

std::vector<exprEngineParser::ExprContext *> exprEngineParser::ExprGtContext::expr() {
  return getRuleContexts<exprEngineParser::ExprContext>();
}

exprEngineParser::ExprContext* exprEngineParser::ExprGtContext::expr(size_t i) {
  return getRuleContext<exprEngineParser::ExprContext>(i);
}

exprEngineParser::ExprGtContext::ExprGtContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprGtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprGt(this);
}
void exprEngineParser::ExprGtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprGt(this);
}

std::any exprEngineParser::ExprGtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprGt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprLiteralContext ------------------------------------------------------------------

exprEngineParser::LiteralContext* exprEngineParser::ExprLiteralContext::literal() {
  return getRuleContext<exprEngineParser::LiteralContext>(0);
}

exprEngineParser::ExprLiteralContext::ExprLiteralContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprLiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprLiteral(this);
}
void exprEngineParser::ExprLiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprLiteral(this);
}

std::any exprEngineParser::ExprLiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprLiteral(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprParenContext ------------------------------------------------------------------

tree::TerminalNode* exprEngineParser::ExprParenContext::LPAREN() {
  return getToken(exprEngineParser::LPAREN, 0);
}

exprEngineParser::ExprContext* exprEngineParser::ExprParenContext::expr() {
  return getRuleContext<exprEngineParser::ExprContext>(0);
}

tree::TerminalNode* exprEngineParser::ExprParenContext::RPAREN() {
  return getToken(exprEngineParser::RPAREN, 0);
}

exprEngineParser::ExprParenContext::ExprParenContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprParenContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprParen(this);
}
void exprEngineParser::ExprParenContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprParen(this);
}

std::any exprEngineParser::ExprParenContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprParen(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprSubContext ------------------------------------------------------------------

tree::TerminalNode* exprEngineParser::ExprSubContext::MINUS() {
  return getToken(exprEngineParser::MINUS, 0);
}

std::vector<exprEngineParser::ExprContext *> exprEngineParser::ExprSubContext::expr() {
  return getRuleContexts<exprEngineParser::ExprContext>();
}

exprEngineParser::ExprContext* exprEngineParser::ExprSubContext::expr(size_t i) {
  return getRuleContext<exprEngineParser::ExprContext>(i);
}

exprEngineParser::ExprSubContext::ExprSubContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprSubContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprSub(this);
}
void exprEngineParser::ExprSubContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprSub(this);
}

std::any exprEngineParser::ExprSubContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprSub(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprOrContext ------------------------------------------------------------------

tree::TerminalNode* exprEngineParser::ExprOrContext::OR() {
  return getToken(exprEngineParser::OR, 0);
}

std::vector<exprEngineParser::ExprContext *> exprEngineParser::ExprOrContext::expr() {
  return getRuleContexts<exprEngineParser::ExprContext>();
}

exprEngineParser::ExprContext* exprEngineParser::ExprOrContext::expr(size_t i) {
  return getRuleContext<exprEngineParser::ExprContext>(i);
}

exprEngineParser::ExprOrContext::ExprOrContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprOrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprOr(this);
}
void exprEngineParser::ExprOrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprOr(this);
}

std::any exprEngineParser::ExprOrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprOr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprExpContext ------------------------------------------------------------------

tree::TerminalNode* exprEngineParser::ExprExpContext::CARET() {
  return getToken(exprEngineParser::CARET, 0);
}

std::vector<exprEngineParser::ExprContext *> exprEngineParser::ExprExpContext::expr() {
  return getRuleContexts<exprEngineParser::ExprContext>();
}

exprEngineParser::ExprContext* exprEngineParser::ExprExpContext::expr(size_t i) {
  return getRuleContext<exprEngineParser::ExprContext>(i);
}

exprEngineParser::ExprExpContext::ExprExpContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprExp(this);
}
void exprEngineParser::ExprExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprExp(this);
}

std::any exprEngineParser::ExprExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprLteContext ------------------------------------------------------------------

tree::TerminalNode* exprEngineParser::ExprLteContext::LTE() {
  return getToken(exprEngineParser::LTE, 0);
}

std::vector<exprEngineParser::ExprContext *> exprEngineParser::ExprLteContext::expr() {
  return getRuleContexts<exprEngineParser::ExprContext>();
}

exprEngineParser::ExprContext* exprEngineParser::ExprLteContext::expr(size_t i) {
  return getRuleContext<exprEngineParser::ExprContext>(i);
}

exprEngineParser::ExprLteContext::ExprLteContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprLteContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprLte(this);
}
void exprEngineParser::ExprLteContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprLte(this);
}

std::any exprEngineParser::ExprLteContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprEngineParserVisitor*>(visitor))
    return parserVisitor->visitExprLte(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprCallContext ------------------------------------------------------------------

exprEngineParser::FunctionCallContext* exprEngineParser::ExprCallContext::functionCall() {
  return getRuleContext<exprEngineParser::FunctionCallContext>(0);
}

exprEngineParser::ExprCallContext::ExprCallContext(ExprContext *ctx) { copyFrom(ctx); }

void exprEngineParser::ExprCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprCall(this);
}
void exprEngineParser::ExprCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<exprEngineParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprCall(this);
}
